llvm/test/tools/llubi/intr_vector_extract_bad_idx.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  %extract_bad_idx = call <2 x i32> @llvm.vector.extract.v2i32.v6i32(<6 x i32> zeroinitializer, i64 1)
  ret void
}

; CHECK: Entering function: main
; CHECK-NEXT: Immediate UB detected: llvm.vector.extract index is not a multiple of the result's known minimum vector length.
; CHECK-NEXT: error: Execution of function 'main' failed.
